Fix: Stretching on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ video {
   z-index: -100;
   background-size: fill !important;
   transform: translate(0%, -1%);  */
-  object-fit: fill !important;
+  object-fit: cover !important;
   width: 100%;
   height: 100%;
 }
